Fix paths in config.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -10,9 +10,9 @@ defaults
 
 frontend http
         bind 0.0.0.0:9000
-        use_backend user_tags_server if { path_beg /user_tags }
-        use_backend user_profiles_server if { path_beg /user_profiles }
-        use_backend statistics_server if { path_beg /aggregates }
+        use_backend user_tags_server if { path_beg /user_tags/ }
+        use_backend user_profiles_server if { path_beg /user_profiles/ }
+        use_backend statistics_server if { path_beg /aggregates/ }
 
         default_backend user_tags_server
 
