Fix paths in config.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -18,15 +18,15 @@ frontend http
 
 backend user_tags_server
         balance roundrobin
-        server st133vm101_rtb_lab_pl st133vm101.rtb.lab.pl:8000
+        server st133vm101_rtb_lab_pl st133vm101.rtb-lab.pl:8000
 
 backend user_profiles_server
         balance roundrobin
-        server st133vm102_rtb_lab_pl st133vm102.rtb.lab.pl:8000
+        server st133vm102_rtb_lab_pl st133vm102.rtb-lab.pl:8000
 
 backend statistics_server
         balance roundrobin
-        server st133vm103_rtb_lab_pl st133vm103.rtb.lab.pl:8000
+        server st133vm103_rtb_lab_pl st133vm103.rtb-lab.pl:8000
 
 frontend stats
         bind 0.0.0.0:10000
